# aluna-api

./: .containerignore  .env.example  .gitignore  API_ENDPOINTS.md  CONTAINER.md  Containerfile  MODELOS_README.md  README.md  alembic.ini  aluna-api-pod.yaml  aluna-db-pod.yaml  build-manifest.sh  create-pods.md  main.py  pyproject.toml  requirements.txt
.github/instructions/: general.instructions.md
alembic/: env.py
alembic/versions/: 6a86589c2b05_create_obstetric_models_with_updated_.py
app/api/v1/: router.py
app/api/v1/endpoints/: predictions.py
app/core/: config.py  events.py
app/models/: __init__.py  obstetric.py
app/schemas/: __init__.py  prediction.py
app/services/: __init__.py  ml_services.py  prediction_service.py
