[project]
name = "aluna-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.0",
    "fastapi>=0.128.0",
    "joblib>=1.5.3",
    "psycopg2-binary>=2.9.11",
    "pydantic-settings>=2.12.0",
    "scikit-learn>=1.8.0",
    "sqlalchemy>=2.0.45",
    "uvicorn[standard]>=0.40.0",
]
